退会ページ作成中

--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -17,7 +17,7 @@
 
       <div class="d-flex flex-row">
         <p>登録情報</p>
-        <P class="ml-3"><%= link_to '編集する', customers_info_edit_path %></P>
+        <P class="ml-3"><%= link_to '編集する', customers_info_edit_path, class: "btn btn-sm btn-success" %></P>
       </div>
 
       <table class="table">
