--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -41,6 +41,7 @@
         <div class="row form-group">
           <p class="col-md-2"></p>
           <div class="col-md-3"><%= f.submit "編集内容を保存"%></div>
+          <div class="col-md-3"><%= link_to "退会する", customers_unsubscribe_path, class: "btn btn-sm btn-danger"%></div>
         </div>
 
       <% end %>
