--- a/app/views/public/customers/unsubscribe.html.erb
+++ b/app/views/public/customers/unsubscribe.html.erb
@@ -1,1 +1,20 @@
-<h1>退会ページ</h1>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto text-center">
+
+      <h2 class="mb-5">本当に退会しますか？</h2>
+      <P class="mb-5">
+        退会すると、会員情報登録や<br>
+        これまでの購入履歴が閲覧できなくなります。<br>
+        退会する場合は、「退会する」をクリックしてください。
+      </P>
+
+      <div>
+        <%= link_to "退会しない", root_path, class: "btn btn-sm btn-primary"%>
+        <%= link_to "退会する", root_path, class: "btn btn-sm btn-danger"%>
+      </div>
+
+
+    </div>
+  </div>
+</div>
