--- a/app/views/public/customers/unsubscribe.html.erb
+++ b/app/views/public/customers/unsubscribe.html.erb
@@ -10,8 +10,8 @@
       </P>
 
       <div>
-        <%= link_to "退会しない", root_path, class: "btn btn-sm btn-primary"%>
-        <%= link_to "退会する", root_path, class: "btn btn-sm btn-danger"%>
+        <%= link_to "退会しない", customers_my_page_path, class: "btn btn-sm btn-primary"%>
+        <%= link_to "退会する", customers_withdraw_path, method: :patch, data: { confilm: "本当に退会しますか？" }, class: "btn btn-sm btn-danger"%>
       </div>
 
 
