--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -1,36 +1,44 @@
-<h2>User info</h2>
-  <%= form_with model: @item do |f| %>
-    <div>
+<div class='container px-5 px-sm-0'>
+  <div class='row'>
+    <div class='col-md-3'>
+      <h3>商品新規登録</h3>
+      <%= form_with model: @item do |f| %>
+        <div class="form-group">
       <!--画像-->
-      <%#= f.label :image %>
-      <%#= f.file_field :profile_image, accept: "image/*", class: "form-control-file user_image" %>
-    </div>
-    <div>
+          <%= f.label :image, '商品画像' %>
+          <%= f.file_field :image, accept: "image/*", class: "form-control-file user_image" %>
+        </div>
+        <div class="form-group">
       <!--商品名-->
-      <%#= f.label :name %>
-      <%#= f.text_field :name, class: "form-control name" %>
-    </div>
-    <div>
+          <%= f.label :name %>
+          <%= f.text_field :name, class: "form-control name" %>
+        </div>
+        <div class="form-group">
       <!--商品説明-->
-      <%#= f.label :introduction %>
-      <%#= f.text_area :introduction, class: "form-control introduction" %>
-    </div>
-    <div>
+          <%= f.label :introduction %>
+          <%= f.text_area :introduction, class: "form-control introduction" %>
+        </div>
+        <div class="form-group">
       <!--ジャンル-->
-      <%#= f.label :introduction %>
-      <%#= f.select :genre, :introduction, class: "form-control introduction" %>
+          <%= f.label :genre_id, 'ジャンル' %>
+          <%= f.select :genre_id,  [['ケーキ', 1], ['焼き菓子', 2]], { include_blank: true, selected: 1 }, { id: "user_id", class: "user_class" } %>
+        </div>
+        <div class="form-group">
+      <!--税抜価格,数字の指定する？？-->
+          <h5>税抜価格</h5>
+          <%= f.text_field :price %>
+        </div>
+        <div class="form-group">
+      <!--販売ステータス ラジオボタン　-->
+          <%= f.label :sales_status_sale, '販売中' %>
+          <%= f.radio_button :sales_status, :sale %>
+          <%= f.label :sales_status_discontinued, '販売停止中' %>
+          <%= f.radio_button :sales_status, :discontinued %>
+        </div>
+        <div class="form-group">
+          <%= f.submit "新規登録", class: "btn btn-success" %>
+        </div>
+      <% end %>
     </div>
-    <div>
-      <!--税抜価格-->
-      <%#= f.label :introduction %>
-      <%#= f.text_area :introduction, class: "form-control introduction" %>
-    </div>
-      <!--販売ステータス ラジオボタン-->
-      <%#= f.label :is_active %>
-      <%#= f.radio_button :introduction, class: "form-control introduction" %>
-    </div>
-    <div>
-      <!--新規登録ボタン-->
-      <%= f.submit "新規登録", class: "btn btn-secondary" %>
-    </div>
-  <% end %>
+  </div>
+</div>
