--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -1,2 +1,43 @@
-<h1>Admin::Items#edit</h1>
-<p>Find me in app/views/admin/items/edit.html.erb</p>
+<div class='container px-5 px-sm-0'>
+  <div class='row'>
+    <div class='col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto'>
+      <h4>商品新規登録</h4>
+      <%= form_with model: @item do |f| %>
+        <div class="form-group">
+          <%= f.label :image, '商品画像' %>
+          <%= f.file_field :image, accept: "image/*", class: "form-control-file user_image" %>
+        </div>
+        <div class="form-group">
+          <%= f.label :name, '商品名' %>
+          <%= f.text_field :name, class: "form-control name" %>
+        </div>
+        <div class="form-group">
+          <%= f.label :introduction, '商品説明' %>
+          <%= f.text_area :introduction, class: "form-control introduction" %>
+        </div>
+        <div class="form-group">
+      <!--ジャンル-->
+          <%= f.label :genre_id, 'ジャンル' %>
+          <%= f.select :genre_id,  [['ケーキ', 1], ['焼き菓子', 2]], { include_blank: "--選択してください--" }, { id: "user_id", class: "user_class" } %>
+        </div>
+        <div class="form-group">
+      <!--税抜価格,数字の指定する？？-->
+          <%= f.label :price, '税抜価格' %>
+          <%= f.text_field :price %>
+        </div>
+        <div class="form-group">
+      <!--販売ステータス ラジオボタン　-->
+          <%= f.label :sales_status_sale, '販売中' %>
+          <%= f.radio_button :sales_status, :sale %>
+          <%= f.label :sales_status_discontinued, '販売停止中' %>
+          <%= f.radio_button :sales_status, :discontinued %>
+        </div>
+        <div class="form-group">
+          <!---->
+          <%= f.submit "新規登録", class: "btn btn-success" %>
+          <%#= link_to '新規登録', リンク先_path class: "btn btn-success" %>
+        </div>
+      <% end %>
+    </div>
+  </div>
+</div>
