--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -1,31 +1,28 @@
 <div class='container px-5 px-sm-0'>
   <div class='row'>
-    <div class='col-md-3'>
+    <div class='col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto'>
       <h3>商品新規登録</h3>
       <%= form_with model: @item do |f| %>
         <div class="form-group">
-      <!--画像-->
           <%= f.label :image, '商品画像' %>
           <%= f.file_field :image, accept: "image/*", class: "form-control-file user_image" %>
         </div>
         <div class="form-group">
-      <!--商品名-->
-          <%= f.label :name %>
+          <%= f.label :name, '商品名' %>
           <%= f.text_field :name, class: "form-control name" %>
         </div>
         <div class="form-group">
-      <!--商品説明-->
-          <%= f.label :introduction %>
+          <%= f.label :introduction, '商品説明' %>
           <%= f.text_area :introduction, class: "form-control introduction" %>
         </div>
         <div class="form-group">
       <!--ジャンル-->
           <%= f.label :genre_id, 'ジャンル' %>
-          <%= f.select :genre_id,  [['ケーキ', 1], ['焼き菓子', 2]], { include_blank: true, selected: 1 }, { id: "user_id", class: "user_class" } %>
+          <%= f.select :genre_id,  [['ケーキ', 1], ['焼き菓子', 2]], { include_blank: "--選択してください--" }, { id: "user_id", class: "user_class" } %>
         </div>
         <div class="form-group">
       <!--税抜価格,数字の指定する？？-->
-          <h5>税抜価格</h5>
+          <%= f.label :price, '税抜価格' %>
           <%= f.text_field :price %>
         </div>
         <div class="form-group">
