--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -1,8 +1,8 @@
 <div class='container px-5 px-sm-0'>
   <div class='row'>
     <div class='col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto'>
-      <h4>商品新規登録</h4>
-      <%= form_with model: @item do |f| %>
+      <h4>商品編集</h4>
+      <%= form_with model: @item, url: admin_items_path, method: :post do |f| %>
         <div class="form-group">
           <%= f.label :image, '商品画像' %>
           <%= f.file_field :image, accept: "image/*", class: "form-control-file user_image" %>
@@ -33,9 +33,7 @@
           <%= f.radio_button :sales_status, :discontinued %>
         </div>
         <div class="form-group">
-          <!---->
-          <%= f.submit "新規登録", class: "btn btn-success" %>
-          <%#= link_to '新規登録', リンク先_path class: "btn btn-success" %>
+          <%= f.submit "変更を保存", class: "btn btn-success" %>
         </div>
       <% end %>
     </div>
