配送先一覧、編集ページ完成

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,6 +31,17 @@
     <% end %>
   </header>
 
+  <!-- フラッシュメッセージ -->
+  <% if flash[:notice] %>
+    <div class="text-success">
+      <p class="notice"><%= notice %></p>
+    </div>
+  <% end %>
+  <% if flash[:alert] %>
+    <div class="text-danger">
+      <p class="alert"><%= alert %></p>
+    </div>
+  <% end %>
 
   <body>
     <%= yield %>
