--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -1,14 +1,3 @@
-<% if flash[:notice] %>
-  <div class="text-success">
-    <p class="notice"><%= notice %></p>
-  </div>
-<% end %>
-<% if flash[:alert] %>
-  <div class="text-danger">
-    <p class="alert"><%= alert %></p>
-  </div>
-<% end %>
-
 <div class = "container" >
   <div class = "row" >
     <div class = "col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
@@ -47,14 +36,16 @@
         </tr>
       </table>
 
-      <div class="d-flex flex-row">
-        <p>配送先</p>
-        <P class="ml-3">一覧を見る</P>
-      </div>
-      <div class="d-flex flex-row">
-        <p>注文履歴</p>
-        <P class="ml-3">一覧を見る</P>
-      </div>
+      <table>
+        <tr>
+          <th style="width: 30%">配送先</th>
+          <td style="width: 40%"><%= link_to "一覧を見る", addresses_path, class: "btn btn-sm btn-primary" %></td>
+        </tr>
+        <tr>
+          <th style="width: 30%">注文履歴</th>
+          <td style="width: 40%"><%= link_to "一覧を見る", addresses_path, class: "btn btn-sm btn-primary" %></td>
+        </tr>
+      </table>
 
     </div>
   </div>
