--- a/app/views/public/customers/unsubscribe.html.erb
+++ b/app/views/public/customers/unsubscribe.html.erb
@@ -11,7 +11,7 @@
 
       <div>
         <%= link_to "退会しない", customers_my_page_path, class: "btn btn-sm btn-primary"%>
-        <%= link_to "退会する", customers_withdraw_path, method: :patch, data: { confilm: "本当に退会しますか？" }, class: "btn btn-sm btn-danger"%>
+        <%= link_to "退会する", customers_withdraw_path, method: :patch, data: { confirm: "本当に退会しますか？" }, class: "btn btn-sm btn-danger"%>
       </div>
 
 
