--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -2,7 +2,7 @@
   <div class='row'>
     <div class='col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto'>
       <h4>商品編集</h4>
-      <%= form_with model: @item, url: admin_items_path, method: :post do |f| %>
+      <%= form_with model: @item, url: admin_item_path(@item), method: :patch do |f| %>
         <div class="form-group">
           <%= f.label :image, '商品画像' %>
           <%= f.file_field :image, accept: "image/*", class: "form-control-file user_image" %>
