--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -28,9 +28,14 @@
         <div class="form-group">
       <!--販売ステータス ラジオボタン　-->
           <%= f.label :is_active_sale, '販売中' %>
-          <%= f.radio_button :is_active, :sale %>
-          <%= f.label :is_active_discontinued, '販売停止中' %>
-          <%= f.radio_button :is_active, :discontinued %>
+          <%= f.radio_button :is_active, Item.is_actives_i18n[:sale] %>
+          <%= f.label :is_active_sale, '販売停止中' %>
+          <%= f.radio_button :is_active, Item.is_actives_i18n[:discontinued] %>
+          <%#= f.radio_button :is_active, Item.is_actives %>
+          <%#= f.label :is_active_sale, '販売中' %>
+          <%#= f.radio_button :is_active, :sale %>
+          <%#= f.label :is_active_discontinued, '販売停止中' %>
+          <%#= f.radio_button :is_active, :discontinued %>
         </div>
         <div class="form-group">
           <%= f.submit "変更を保存", class: "btn btn-success" %>
