finished_customers/index

--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -1,2 +1,5 @@
-<h1>Admin::Customers#show</h1>
-<p>Find me in app/views/admin/customers/show.html.erb</p>
+<div class="container mt-5">
+  <h3>
+    <span style="background-color: #FAF0E6;"><%= @customer.full_name %>さんの会員詳細</span>
+  </h3>
+</div>
