--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -23,6 +23,11 @@
             <% end %>
             </li>
         </ul>
-</div>
+     </div>
+
+     <div class="d-flex justify-content-center mt-3">
+       <%= link_to '編集する', edit_admin_customer_path(@customer), class: 'btn btn-info mx-5' %>
+       <%= link_to '注文履歴一覧を見る', admin_root_path(@customer), class: 'btn btn-secondary mx-5' %>
+     </div>
 </div>
 </div>
