--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -6,31 +6,25 @@
 <div class='container px-5 px-sm-0'>
   <div class='row'>
     <div class="col-md-3">
-      <%= image_tag @item.get_image, class: "form-control-file user_image" %>
+      <%= image_tag @item.get_image(200,200) %>
     </div>
     <div class='col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto'>
-        <div class="form-group">
+        <div>
           <%= @item.name %>
         </div>
-        <div class="form-group">
-
+        <div>
           <%= @item.introduction %>
         </div>
-        <div class="form-group">
-
+        <div>
           <%= @item.genre_id %>
         </div>
-        <div class="form-group">
-
+        <div>
           <%= @item.price %>
         </div>
-        <div class="form-group">
-          <%= @item.is_active %>
+        <div>
+          <%= @item.is_active_i18n %>
         </div>
-        <div class="form-group">
-          <%#= form_with model: @item do |f| %>
-          <%#= f.submit "編集する", class: "btn btn-success" %>
-          <%# end %>
+        <div>
           <%= link_to "編集する", edit_admin_item_path(@item.id), class: "btn btn-sm btn-success" %>
         </div>
     </div>
