--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -1,3 +1,53 @@
 <div class="container mt-5">
-  <
+  <h3>
+    <span style="background-color: #FAF0E6;"><%= @customer.full_name %>さんの会員情報編集画面</span>
+  </h3>
+  <%= form_with(model: @customer, url: admin_customer_path(@customer), method: :path, local: true: "edit_customer"), do |f| %>
+    <div class="row">
+      <div class="col-md-6">
+        <div class="form-group">
+          <label for="customer_id">会員ID</label>
+          <input type="text" class="form-control" id="customer_id" value="<%= @cusomer.id %>" readonly>
+        </div>
+        
+        <div class="form-group">
+          <label for="cusomer_name">氏名</label>
+          <%= f.text_field :first_name, class: "form-control", placeholder: "姓" %>
+          <%= f.text_field :last_name, class: "form-control", placeholder: "名" %>
+        </div>
+        
+        <div class="form-group">
+          <label for="customer_name_kana">フリガナ</label>
+          <%= f.text_field :first_name_kana, class: "form_-ontrol", placeholder: "セイ" %>
+          <%= f.text_filed :last_name_kana, class: "form-control mt-2", placeholder: "メイ" %>
+        </div>
+        
+        <div class="form-group">
+          <label for="customer_post_code">郵便番号</label>
+          <%= f.text_field :post_code, class: "form-control" %>
+        </div>
+        
+        <div class="form-group">
+          <label for="cusomer_address">住所</label>
+          <%= f.text_field :address, class: "form-control" %>
+        </div>
+        
+        <div class="form-group">
+          <label for="cusomer_phone_number"></label>
+          <%= f.text_field :phone_number, class: "form-control" %>
+        </div>
+        
+        <div class="form-group">
+          <label for="customer_email">メールアドレス</label>
+          <%= t.text_field :email, class: "form-control" %>
+        </div>
+        
+        <div class="form-group">
+          <label for="customer_is_deleted">会員ステータス</label>
+          <select class="form-control" id="customer_is_deleted" disabled>
+            
+          </select>
+        </div>
+      </div>
+    </div>
 </div>
