--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -1,25 +1,36 @@
-ジャンル一覧・追加
-ジャンル名　フォーム　新規登録ボタン
-
 <div class='container px-5 px-sm-0'>
+<h4>ジャンル一覧・追加</h4>
+<%= form_with model: @genre, url: admin_genres_path, method: :post do |f| %>
+
+    <%= f.label :name, 'ジャンル名' %>
+
+    <%= f.text_field :name %>
+
+    <%= f.submit "新規登録", class: "btn btn-success" %>
+
+<% end %>
+
+
   <div class='row'>
-    <div class='col-md-3'>
-<table class='table table-hover table-inverse'>
+    <div class='col-md-4 pt-md-5'>
+      <table class='table'>
         <thead>
           <tr>
             <th>ジャンル</th>
-            <th></th>
+            <th colspan="2"></th>
           </tr>
         </thead>
         <tbody>
-          <% @items.each do |item| %>
+          <% @genres.each do |genre| %>
           <tr>
-            <td><%= item.id %></td>
+            <td><%= genre.name %></td>
+            <td>
+              <%= link_to "編集する", edit_admin_genre_path(genre.id), class: "btn btn-success" %>
+            </td>
           </tr>
           <% end %>
         </tbody>
       </table>
-
-
-ジャンル　テーブルタグ
-ジャンル名　編集するボタン
+    </div>
+  </div>
+</div>
