--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -2,6 +2,7 @@
   <div class='row'>
     <div class='col'>
       <h4>商品一覧</h4>
+      <%= link_to 'ジャンル追加(仮)', admin_genres_path %>
       <div class="text-right">
         <%= link_to new_admin_item_path, class: "btn btn-{themecolor}.rounded-circle.p-0", method: :get do %>
         <i class="fas fa-plus"></i>
