--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -46,3 +46,27 @@ h1, h2, h3, h4, h5, h6 {
   padding: 12px;
 }
 
+// Aboutページ
+.about-section {
+  padding: 60px 0;
+  text-align: center;
+}
+
+.about-heading {
+  font-size: 2.5rem;
+  font-weight: bold;
+  margin-bottom: 40px;
+}
+
+.about-text {
+  font-size: 1.2rem;
+  line-height: 1.6;
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+.about-image {
+  max-width: 100%;
+  border-radius: 10px;
+  margin-top: 40px;
+}
