--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,5 +1,9 @@
-<h1>Public::Homes#about</h1>
-<p>Find me in app/views/public/homes/about.html.erb</p>
-
-
-
+<div class="container about-section">
+  <h2 class="about-heading">Nagano Cakeについて</h2>
+  <p class="about-text">
+    当ケーキ屋は、素材にこだわり、手作りの美味しいケーキをお届けするオンラインショップです。
+    伝統的な製法と最新の技術を融合させ、一つ一つ丁寧に仕上げています。
+    どのケーキもお客様に喜んでいただけることを目指して作られています。
+  </p>
+  <%= image_tag 'chococake.png', class: 'about-image' %>
+</div>
