--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,8 +17,7 @@
   <header>
   <nav class="navbar navbar-expand-lg navbar-light bg-light" style="height: 120px;">
   <div class="container mr-0">
-    <a class="navbar-brand" href="/"><%= image_tag("cakelogo2.png") %></a>
-     <!--<a class="navbar-brand" href="/"><%= image_tag("cakelogo.png") %></a>-->
+    <a class="navbar-brand" href="/"><%= image_tag("headerlogo.png") %></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
