--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,9 +1,10 @@
 <div class="container about-section">
-  <h2 class="about-heading">Nagano Cakeについて</h2>
-  <p class="about-text">
+  <h2 class="about-heading"><span style="background-color: #FAF0E6;">Nagano Cakeについて</span></h2>
+  <p class="about-text"><span style="background-color: #FFF0F5;">
     当ケーキ屋は、素材にこだわり、手作りの美味しいケーキをお届けするオンラインショップです。
     伝統的な製法と最新の技術を融合させ、一つ一つ丁寧に仕上げています。
     どのケーキもお客様に喜んでいただけることを目指して作られています。
   </p>
+  </span>
   <%= image_tag 'chococake.png', class: 'about-image' %>
 </div>
