--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -17,7 +17,8 @@
         </div>
         <div class="form-group">
           <%= f.label :genre_id, 'ジャンル' %>
-          <%= f.select :genre_id,  [['ケーキ', 1], ['焼き菓子', 2]], { include_blank: "--選択してください--" }, { id: "user_id", class: "user_class" } %>
+          <%= f.select :genre_id, Genre.all.map{|o| [o.name, o.id]}, { include_blank: "--選択してください--" } %>
+          <%#= f.select :genre_id, [['ケーキ', 1], ['焼き菓子', 2]], { include_blank: "--選択してください--" }, { id: "user_id", class: "user_class" } %>
         </div>
         <div class="form-group">
       <!--税抜価格,数字の指定する？？-->
