--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -21,7 +21,7 @@
   </div>
 
   <div class="container mt-5">
-  <h2 class="text-center">新着商品</h2>
+  <h2 class="text-center">🎉新着商品🎉</h2>
   <div class="row">
     <% 4.times do |i| %> <!-- 4つの画像を表示するための繰り返し処理 -->
       <div class="col-md-3">
