--- a/app/views/admin/genres/edit.html.erb
+++ b/app/views/admin/genres/edit.html.erb
@@ -1,5 +1,5 @@
 <h4>ジャンル編集</h4>
-<%= form_with model: @genre, url: admin_genres_path, method: :post do |f| %>
+<%= form_with model: @genre, url: admin_genre_path, method: :patch do |f| %>
   <%= f.label :name, 'ジャンル名' %>
   <%= f.text_field :name %>
   <%= f.submit "変更を保存", class: "btn btn-success" %>
