--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -28,11 +28,17 @@
         <div class="card">
           <%= image_tag "sample_product_#{i+1}.jpg", alt: "商品画像#{i+1}", class: 'card-img-top img-fluid' %>
           <div class="card-body">
-            <h5 class="card-title">商品名#{i+1}</h5>
-            <p class="card-text">価格: ¥1,000</p>
+            <h5 class="card-title">商品名:こだわりケーキ</h5>
+            <p class="card-text">価格: ¥10,000</p>
           </div>
         </div>
       </div>
     <% end %>
+  </div>
+</div>
+
+<div class="container mt-5">
+  <div class="text-right">
+    <%= link_to '全ての商品を見る', items_path, class: 'btn btn-outline-secondary' %>
   </div>
 </div>
