--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -29,8 +29,8 @@
               <%= f.select :quantity, *[1..10] %>
               <%= f.submit "変更", class: "btn btn-sm btn-primary" %>
             <% end %>
-          <td style="width:150px"><%= (cart_item.item.with_tax_price * cart_item.quantity).to_s(:delimited) %></td>
-          <% @total += cart_item.item.with_tax_price * cart_item.quantity %>
+          <td style="width:150px"><%= cart_item.subtotal.to_s(:delimited) %></td>
+          <% @total += cart_item.subtotal %>
           <td style="width:150px" class="text-center"><%= link_to "削除する", cart_item_path(cart_item.id), method: :delete, class: "btn btn-sm btn-danger" %></td>
         </tr>
         <% end %>
