--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -5,8 +5,8 @@
         <div class="text-center mt-5">
          <h1><span style="background-color: #FAF0E6;">ようこそ、ながのCAKEへ！</h1></span>
           <%= image_tag 'toppagecake.png', alt: 'ながのケーキ', class: 'img-fluid'%>
-
-          <h4>
+         <div class="cakelogo">
+          <h4 class="cake-sentence">
             このサイトはケーキ販売の<br>
             ECサイトになります。<br>
             会員でない方も商品の<br>
@@ -14,6 +14,7 @@
             購入には会員登録が<br>
             必要になります。
           </h4>
+          </div>
         </div>
       </div>
       <div class="col-md-2"></div>
