--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -9,9 +9,9 @@
       </tr>
      </thead>
      <tbody>
-      <% @items.each do |item| %>
+      <% @genres.each do |genre| %>
       <tr>
-       <td><%= item.genre_id %></td>
+       <td><%= genre.name %></td>
       </tr>
       <% end %>
      </tbody>
@@ -42,7 +42,7 @@
       <% end %>
      </div>
      <% end %>
-    
+
    </div>
   </div>
 </div>
