--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,12 +28,13 @@
           <%= link_to "About", about_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
-          <%= link_to "商品一覧", root_path, class: "nav-link" %>
+          <%= link_to "商品一覧", items_path, class: "nav-link" %>
         </li>
         <% if customer_signed_in? %>
           <li class="nav-item">
             <%= link_to "ログアウト", destroy_customer_session_path, method: :delete, class: "nav-link" %>
           </li>
+          
         <% elsif admin_signed_in? %>
           <li class="nav-item">
             <%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class: "nav-link" %>
@@ -76,4 +77,23 @@
   <body>
     <%= yield %>
   </body>
+
+<footer>
+  <div class="container mt-5">
+    <div class="row">
+      <div class="mx-auto">
+
+        <% if admin_signed_in? %>
+          <%= link_to "管理者ページ", admin_items_path, class: "nav-link" %>
+          <!--↑注文履歴一覧へパス-->
+        <% else %>
+          <%= link_to "管理者ページ", admin_session_path, class: "nav-link" %>
+        <% end %>
+
+        <p>CopyRight 3bit.inc</p>
+      </div>
+    </div>
+  </div>
+</footer>
+
 </html>
