--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -26,7 +26,7 @@
           <% end %>
         </tbody>
       </table>
-      <%= paginate @genres %>
+      <%= paginate @genres, theme: 'twitter-bootstrap-4' %>
     </div>
   </div>
 </div>
