--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,22 +24,41 @@
     <!--<%= link_to "Nagano Cake", root_path, class: "navbar-brand" %>-->
     <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
       <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <%= link_to "About", about_path, class: "nav-link" %>
-        </li>
-        <li class="nav-item">
-          <%= link_to "商品一覧", items_path, class: "nav-link" %>
-        </li>
+
         <% if customer_signed_in? %>
+          <li class="nav-item">
+            <%= link_to "マイページ", customers_my_page_path, class: "nav-link" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "商品一覧", items_path, class: "nav-link" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "カート", cart_items_path, class: "nav-link" %>
+          </li>
           <li class="nav-item">
             <%= link_to "ログアウト", destroy_customer_session_path, method: :delete, class: "nav-link" %>
           </li>
-          
         <% elsif admin_signed_in? %>
+          <li class="nav-item">
+            <%= link_to "会員一覧", admin_customers_path, class: "nav-link" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "注文履歴一覧", admin_items_path, class: "nav-link" %>
+            <!--↑注文履歴一覧へパス変更-->
+          </li>
+          <li class="nav-item">
+            <%= link_to 'ジャンル一覧', admin_genres_path, class: "nav-link" %>
+          </li>
           <li class="nav-item">
             <%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class: "nav-link" %>
           </li>
         <% else %>
+          <li class="nav-item">
+            <%= link_to "About", about_path, class: "nav-link" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "商品一覧", items_path, class: "nav-link" %>
+          </li>
           <li class="nav-item">
             <%= link_to "新規登録", new_customer_registration_path, class: "nav-link" %>
           </li>
