会員側item showページ修正

--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -23,8 +23,8 @@
             <td><%= order.status %></td>
           <% end %>
         </tr>
-
       </tbody>
     </table>
+    <div class="mx-auto"><%= paginate @orders %></div>
   </div>
 </div>
