--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,6 +39,9 @@
             <%= link_to "ログアウト", destroy_customer_session_path, method: :delete, class: "nav-link" %>
           </li>
         <% elsif admin_signed_in? %>
+        <li class="nav-item">
+            <%= link_to "商品一覧", admin_items_path, class: "nav-link" %>
+          </li>
           <li class="nav-item">
             <%= link_to "会員一覧", admin_customers_path, class: "nav-link" %>
           </li>
