--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -6,12 +6,9 @@
         <h3 class="lead">この度はながのケーキをお選び頂き誠にありがとうございます🎉</h3>
       </div>
 
-      <div class="row g-5">
-        <div class="col-md-5 col-lg-3 order-md-last">
 
-        </div>
 
-        <div class="col-md-7 col-lg-8">
+        <div class="mx-auto col-md-8">
           <h4 class="mb-5">請求先住所</h4>
         <%= form_with model: @order, url: check_orders_path, method: :post, local: true, class: "needs-validation", novalidate: true do |f| %>
 
@@ -27,21 +24,7 @@
                 </div>
               </div>
 
-              <!--<div class="col-12">-->
-              <!--  <%#= f.label :username, class: "form-label" do %>-->
-              <!--    ユーザーネーム-->
-              <!--  <%# end %>-->
-              <!--  <div class="input-group has-validation">-->
-              <!--    <span class="input-group-text">@</span>-->
-              <!--    <%#= f.text_field :username, class: "form-control", id: "username", placeholder: "ユーザーネーム", required: true %>-->
-              <!--    <div class="invalid-feedback">-->
-              <!--      ユーザー名が必要です-->
-              <!--    </div>-->
-              <!--  </div>-->
-              <!--</div>-->
-
-
-
+          
               <div class="col-md-3">
                   <%= f.label :post_code, class: "form-label" do %>
                     郵便番号
@@ -88,4 +71,3 @@
                                 </div>
                               </div>
                             </main>
-
