--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -1,2 +1,29 @@
-<h1>Admin::Orders#show</h1>
-<p>Find me in app/views/admin/orders/show.html.erb</p>
+<div class="container">
+  <h2>注文履歴詳細</h2>
+  <table>
+    <tr>
+      <th>購入者</th>
+      <td></td>
+    </tr>
+    <tr>
+      <th>注文日</th>
+      <td></td>
+    </tr>
+    <tr>
+      <th>配送先</th>
+      <td></td>
+    </tr>
+    <tr>
+      <th>支払方法</th>
+      <td></td>
+    </tr>
+    <tr>
+      <th>注文ステータス</th>
+      <td>
+        <% form_with model: @order, url: admin_order_path(@order), method: :post |f| %>
+          <%= f.select :status, options_for_select(  %>
+        <% end %>
+      </td>
+    </tr>
+  </table>
+</div>
