--- a/app/views/public/orders/check.html.erb
+++ b/app/views/public/orders/check.html.erb
@@ -4,7 +4,7 @@
 
   <table class="confirmation-table">
     <thead>
-      <%= @order.payment_method_i18n %>
+      <%#= @order.payment_method_i18n %>
       <tr>
         <th>商品名</th>
         <th>単価（税込）</th>
