admin/order/showページ追加

--- a/app/views/public/orders/check.html.erb
+++ b/app/views/public/orders/check.html.erb
@@ -33,7 +33,7 @@
       </tr>
       <tr>
         <td colspan="3" class="text-right">請求金額</td>
-        <td class="text-right">￥<%= f.hidden_field :billing_amont, value: (@total + 800).to_s(:delimited) %><%= (@total + 800).to_s(:delimited) %></td>
+        <td class="text-right">￥<%= f.hidden_field :billing_amont, value: (@total + 800) %><%= (@total + 800).to_s(:delimited) %></td>
       </tr>
 
     </tbody>
