--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -1,2 +1,43 @@
-<h1>Public::Orders#index</h1>
-<p>Find me in app/views/public/orders/index.html.erb</p>
+<h1 class="text-center add-font mt-4">注文履歴画面</h1>
+
+<div class="container add-font">
+  <h2 class="order-history-title">注文履歴一覧</h2>
+  <div class="table-responsive">
+    <table class="table custom-table">
+      <thead class="thead">
+        <tr>
+          <th>注文日</th>
+          <th>配送先</th>
+          <th>注文商品</th>
+          <th>支払金額</th>
+          <th>ステータス</th>
+          <th>注文詳細</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @orders.each do |order| %>
+          <tr>
+            <td><%= order.created_at.strftime("%Y/%m/%d") %></td>
+            <td>
+              〒<%= order.post_code %><br>
+              <%= order.address %><br>
+              <%= order.name %><br>
+            </td>
+            <td>
+              <% order.order_details.each do |f| %>
+                <%= f.item.name %><br>
+              <% end %>
+            </td>
+            <td><%= order.total_price %>円</td>
+            <td><%= order.status_i18n %></td>
+            <td>
+              <div class="d-flex justify-content-center">
+                <%= link_to "表示する", orders_path(order.id), class: 'btn btn-secondary' %>
+              </div>
+            </td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+</div>
