--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -32,7 +32,7 @@
             <td><%= order.status_i18n %></td>
             <td>
               <div class="d-flex justify-content-center">
-                <%= link_to "表示する", orders_path(order.id), class: 'btn btn-secondary' %>
+                <%= link_to "表示する", order_path(order.id), class: 'btn btn-secondary' %>
               </div>
             </td>
           </tr>
